--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "railway-eris-slash-bot",
+  "name": "ai-moderator-bot",
   "version": "1.0.0",
-  "type": "module",
-  "scripts": {
-    "start": "node index.js"
-  },
+  "main": "index.js",
+  "license": "MIT",
   "dependencies": {
-    "eris": "^0.17.2",
-    "dotenv": "^16.0.0"
+    "discord.js": "^14.0.0",
+    "@google/generative-ai": "^0.3.0"
   }
 }
