--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
   },
   "dependencies": {
     "discord.js": "^14.24.1",
-    "@google/generative-ai": "^0.3.1"
+    "@google/generative-ai": "gemini-2.5-flash"
   }
 }
