--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "ai-moderator-bot",
   "version": "1.0.0",
+  "description": "A Discord bot that checks for Modrinth updates and has adjustable embed settings.",
   "main": "index.js",
-  "license": "MIT",
+  "type": "commonjs",
   "scripts": {
-    "start": "node index.js",
-    "build": "echo \"no build step needed\""
+    "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^14.24.1",
-    "@google/generative-ai": "^0.3.1"
-  }
+    "discord.js": "^14.16.3",
+    "express": "^4.21.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "license": "MIT"
 }
